--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "program.js",
   "dependencies": {
-    "node-promise": "^0.5.12",
-    "request-promise": "^1.0.2"
+    "node-promise": "^0.5.12"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "lodash": "^3.10.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/brbarnett/AdventOfCode.git"
